--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "source-map-loader": "^5.0.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
